Fix headers + alignment on archive pages

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -1,6 +1,9 @@
 .site-main {
 	@include container( $size-post-width );
-	padding: 0 80px;
+
+	.hentry {
+		padding: 0 80px;
+	}
 }
 
 body.page {
@@ -34,7 +37,7 @@ body.page {
 }
 
 .page-header {
-	margin: 40px auto 20px;
+	margin: 0;
 }
 
 .page-title {
