--- a/sass/content/_404.scss
+++ b/sass/content/_404.scss
@@ -1,6 +1,7 @@
 body.error404 {
 
 	.page-content {
+		padding-bottom: 160px;
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		grid-gap: 30px;
