--- a/sass/widgets/_home-about.scss
+++ b/sass/widgets/_home-about.scss
@@ -1,4 +1,4 @@
-#content-widget-2 {
+body.home #content-widget-2 {
 	.widget-title {
 		color: $blue-600;
 		@include font-size( $font-size-level-2 );
