--- a/sass/widgets/_home-info-header.scss
+++ b/sass/widgets/_home-info-header.scss
@@ -1,4 +1,4 @@
-#content-widget-1 {
+body.home #content-widget-1 {
 	.level-1 {
 		font-family: $font-fancy;
 		@include font-size( $font-size-level-1 );
